--- a/ruml-matrix-cpu-impl/Cargo.toml
+++ b/ruml-matrix-cpu-impl/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 ruml-matrix-traits = { path = "../ruml-matrix-traits" }
+ruml-dim-impl = { path = "../ruml-dim-impl" }
+ruml-index-impl = { path = "../ruml-index-impl" }
 cblas = "0.4.0"
 openblas-src = "0.10.8"
