--- a/ruml-dim-impl/Cargo.toml
+++ b/ruml-dim-impl/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ruml-matrix-traits = { path = "../ruml-matrix-traits" }
+ruml-matrix = { path = "../ruml-matrix" }
