--- a/ruml-index-impl/Cargo.toml
+++ b/ruml-index-impl/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ruml-matrix-traits = { path = "../ruml-matrix-traits" }
+ruml-matrix = { path = "../ruml-matrix" }
 ruml-dim-impl = { path = "../ruml-dim-impl" }
