--- a/ruml-matrix/Cargo.toml
+++ b/ruml-matrix/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+cblas = "0.4.0"
+openblas-src = { version = "0.10.8", features = ["system", "cblas"] }
