--- a/ruml-matrix/Cargo.toml
+++ b/ruml-matrix/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 cblas = "0.4.0"
 openblas-src = { version = "0.10.8", features = ["system", "cblas"] }
+
+[dev-dependencies]
+itertools = { version = "0.10.0", default-features = false, features = ["use_std"] }
