--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 resolver = "2"
 members = [
     "ruml",
-    "ruml-autograd","ruml-matrix",
+    "ruml-autograd",
+    "ruml-matrix",
 ]
 
 [workspace.lints.clippy]
