--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
 resolver = "2"
 members = [
-    "ruml",
-    "ruml-autograd",
-    "ruml-matrix"
+    "zenu",
+    "zenu-autograd",
+    "zenu-matrix"
 ]
 
 [workspace.lints.clippy]
