--- a/zenu/Cargo.toml
+++ b/zenu/Cargo.toml
@@ -9,3 +9,5 @@ license = "MIT"
 
 [dependencies]
 zenu-matrix = { path = "../zenu-matrix", version = "0.1.0" }
+zenu-autograd = { path = "../zenu-autograd", version = "0.1.0" }
+zenu-layer = { path = "../zenu-layer", version = "0.1.0" }
