feat(layer): add Layer trait and dependencies in Cargo.toml
This commit introduces the Layer trait in lib.rs, which is expected to
be implemented by different types of layers in a neural network. It
also adds dependencies for zenu-matrix and zenu-autograd in Cargo.toml.
The Layer trait includes methods for forward propagation, initializing
parameters, and retrieving parameters.

--- a/zenu-layer/Cargo.toml
+++ b/zenu-layer/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+zenu-matrix = { path = "../zenu-matrix", version = "0.1.0" }
+zenu-autograd = { path = "../zenu-autograd", version = "0.1.0" }
 
 [lints]
 workspace = true
