--- a/zenu-autograd/Cargo.toml
+++ b/zenu-autograd/Cargo.toml
@@ -9,3 +9,5 @@ license = "MIT"
 
 [dependencies]
 zenu-matrix = { path = "../zenu-matrix", version = "0.1.0" }
+rand = "0.8.5"
+rand_distr = "0.4.3"
