feat(linear.rs): Implement Linear Layer and its unit tests
This commit implements the Linear Layer in the zenu-layer crate. It
includes the forward and backward propagation methods, parameter
initialization, and shape checking. The implementation is accompanied
by unit tests to ensure its correctness. The commit also includes
necessary changes in other files to support the implementation of the
Linear Layer.

BREAKING CHANGE: The Layer trait has been modified to include new
methods for parameter initialization and shape checking. This might
break existing code that implements the Layer trait.

--- a/zenu-layer/Cargo.toml
+++ b/zenu-layer/Cargo.toml
@@ -9,5 +9,8 @@ edition = "2021"
 zenu-matrix = { path = "../zenu-matrix", version = "0.1.0" }
 zenu-autograd = { path = "../zenu-autograd", version = "0.1.0" }
 
+rand = "0.8.5"
+rand_distr = "0.4.3"
+
 [lints]
 workspace = true
