refactor: Decouple Optimizer from Layer and improve SGD
This commit decouples the `Optimizer` trait from the `Layer` trait,
making it more generic. The `update` method of `Optimizer` now takes a
slice of `Variable` instead of `Layer` trait objects.

The `SGD` optimizer is updated to match the new `Optimizer` trait
definition. The `update` method now takes a slice of `Variable` and
updates their values based on their gradients and the learning rate.

The `Model` trait is updated to remove the `layers` method. A new
function `update` is added which takes a `Variable` representing the
loss and an `Optimizer`, performs backpropagation on the loss, and
updates the trainable variables using the optimizer.

Several minor changes are made in the `zenu-matrix` crate to improve
code quality and readability.

The test `linear_1_layer` in `sgd.rs` is renamed to `simple_test` and
updated to test the new `update` method. The test creates a `Variable`
with a gradient, applies the `SGD` optimizer, and checks that the
variable's value is updated correctly.

--- a/zenu/Cargo.toml
+++ b/zenu/Cargo.toml
@@ -11,3 +11,4 @@ license = "MIT"
 zenu-matrix = { path = "../zenu-matrix", version = "0.1.0" }
 zenu-autograd = { path = "../zenu-autograd", version = "0.1.0" }
 zenu-layer = { path = "../zenu-layer", version = "0.1.0" }
+zenu-optimizer = { path = "../zenu-optimizer", version = "0.1.0" }
