--- a/zenu-matrix/Cargo.toml
+++ b/zenu-matrix/Cargo.toml
@@ -12,6 +12,8 @@ cblas = "0.4.0"
 openblas-src = { version = "0.10.8", features = ["system", "cblas"] }
 rand = "0.8.5"
 rand_distr = "0.4.3"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
 
 [dev-dependencies]
 itertools = { version = "0.10.0", default-features = false, features = ["use_std"] }
