feat(autograd): Add activation functions and tests
This commit introduces several activation functions including sigmoid,
ReLU, tanh, cosh, sinh, and exp. Unit tests for these functions are
also added to ensure their correctness.

In addition, this commit includes changes to the autograd library
to clear gradients after each update, which is crucial for correct
operation during training loops.

The matrix library is also updated to include more mathematical
operations such as sin, cos, tan, asin, acos, atan, sinh, cosh,
tanh, asinh, acosh, atanh.

Finally, the main zenu library now includes a function to split
datasets into training and validation sets, and functions to
download and process the MNIST dataset.

BREAKING CHANGE: The autograd's Variable now clears its gradient
after each update. Make sure to retrieve the gradient before
updating if it's needed later.

--- a/zenu/Cargo.toml
+++ b/zenu/Cargo.toml
@@ -15,3 +15,4 @@ zenu-optimizer = { path = "../zenu-optimizer", version = "0.1.0" }
 
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 flate2 = { version = "1.0", features = ["zlib"] }
+rand = { version = "0.8.5", features = ["small_rng"] }
