--- a/zenu-matrix/Cargo.toml
+++ b/zenu-matrix/Cargo.toml
@@ -17,3 +17,4 @@ serde_json = "1.0.114"
 
 [dev-dependencies]
 itertools = { version = "0.10.0", default-features = false, features = ["use_std"] }
+criterion = "0.5.1"
