--- a/zenu-matrix/Cargo.toml
+++ b/zenu-matrix/Cargo.toml
@@ -2,7 +2,7 @@
 name = "zenu-matrix"
 version = "0.1.0"
 edition = "2021"
-description = "Matrix library for Zenu"
+description = "Matrix library for ZeNu"
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
