feat(matrix): add serialization support for matrices
This commit introduces the ability to serialize and deserialize
matrices. This is done by adding the Serialize and Deserialize traits
from the serde library to the Matrix struct and its associated types.
This feature will allow matrices to be saved and loaded from disk,
which can be useful in various scenarios such as saving and loading
model weights in machine learning applications.

BREAKING CHANGE: The serde and serde_json dependencies have been added
to the zenu-matrix and zenu crates. If you are using these crates, you
will need to add these dependencies to your project as well.

--- a/zenu/Cargo.toml
+++ b/zenu/Cargo.toml
@@ -16,3 +16,5 @@ zenu-optimizer = { path = "../zenu-optimizer", version = "0.1.0" }
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 flate2 = { version = "1.0", features = ["zlib"] }
 rand = { version = "0.8.5", features = ["small_rng"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
