--- a/zenu-layer/Cargo.toml
+++ b/zenu-layer/Cargo.toml
@@ -2,6 +2,8 @@
 name = "zenu-layer"
 version = "0.1.0"
 edition = "2021"
+description = "A simple neural network layer library."
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
