--- a/zenu-optimizer/Cargo.toml
+++ b/zenu-optimizer/Cargo.toml
@@ -2,6 +2,8 @@
 name = "zenu-optimizer"
 version = "0.1.0"
 edition = "2021"
+description = "A simple optimizer for neural networks"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
