--- a/zenu-autograd/Cargo.toml
+++ b/zenu-autograd/Cargo.toml
@@ -11,3 +11,4 @@ license = "MIT"
 zenu-matrix = { path = "../zenu-matrix", version = "0.1.0" }
 rand = "0.8.5"
 rand_distr = "0.4.3"
+lazy_static = "1.4.0"
