--- a/zenu/Cargo.toml
+++ b/zenu/Cargo.toml
@@ -8,8 +8,8 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zenu-matrix = { path = "../zenu-matrix", version = "0.1.0" }
-zenu-autograd = { path = "../zenu-autograd", version = "0.1.0" }
+zenu-matrix = { path = "../zenu-matrix", version = "0.1.1" }
+zenu-autograd = { path = "../zenu-autograd", version = "0.1.1" }
 zenu-layer = { path = "../zenu-layer", version = "0.1.0" }
 zenu-optimizer = { path = "../zenu-optimizer", version = "0.1.0" }
 
@@ -18,3 +18,4 @@ flate2 = { version = "1.0", features = ["zlib"] }
 rand = { version = "0.8.5", features = ["small_rng"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tar = "0.4.40"
