feat: Improve Conv2D and Matrix Benchmarks
This commit introduces several changes to improve the Conv2D and Matrix
benchmarks. It adds a new benchmark for Conv2D without bias and modifies
the Conv2D and Matrix Cargo.toml files to include the new benchmarks.

The Conv2D layer now includes the bias in its parameters if it exists.
The visibility of the Im2ColRes struct and the im2col function in the
Conv2D module has been changed from crate to super.

A new benchmark file, copy_from_im2col_way.rs, has been added to the
Matrix module. The gemm.rs benchmark file in the Matrix module has been
removed.

Lastly, the update_parameters function in the lib.rs file of the Zenu
module has been simplified to clear the gradients of all trainable
variables in one go, instead of iterating over them.

--- a/zenu-autograd/Cargo.toml
+++ b/zenu-autograd/Cargo.toml
@@ -12,3 +12,10 @@ zenu-matrix = { path = "../zenu-matrix", version = "0.1.1" }
 rand = "0.8.5"
 rand_distr = "0.4.3"
 lazy_static = "1.4.0"
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "conv2d"
+harness = false
