--- a/zenu-matrix/Cargo.toml
+++ b/zenu-matrix/Cargo.toml
@@ -22,3 +22,7 @@ serde_json = "1.0.114"
 [[bench]]
 name = "copy_from_im2col_way"
 harness = false
+
+[[bench]]
+name = "copy_from_all_matrix"
+harness = false
