--- a/zenu/Cargo.toml
+++ b/zenu/Cargo.toml
@@ -19,3 +19,7 @@ rand = { version = "0.8.5", features = ["small_rng"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tar = "0.4.40"
+
+[profile.bench]
+debug = true
+
