feat: Improve code quality and performance
- Refactor conv2d_inner function for better readability and performance
- Replace unwrap_or_else with unwrap_or_default for cleaner code
- Change into_iter to iter to avoid unnecessary data copying
- Add new benchmark for im2col function
- Fix logic in get_max_shape_idx_of_apply_blas
- Comment out unused tests in copy_from.rs
- Rename enum variants in Dataset to follow Rust convention
- Handle file read in a more idiomatic way in extract_cifar10_image_label_pairs

--- a/zenu-matrix/Cargo.toml
+++ b/zenu-matrix/Cargo.toml
@@ -31,6 +31,9 @@ harness = false
 name = "transpose_reshape_im2col"
 harness = false
 
+[[bench]]
+name = "im2col_function"
+harness = false
+
 [profile.bench]
 debug = true
-
