--- a/zenu-matrix/Cargo.toml
+++ b/zenu-matrix/Cargo.toml
@@ -14,6 +14,9 @@ rand = "0.8.5"
 rand_distr = "0.4.3"
 serde = { version = "1.0.197", features = ["derive"] }
 
+[features]
+nvidia = ["zenu-cuda-runtime-sys", "zenu-cuda-driver-sys", "zenu-cudnn-sys", "zenu-cublas-sys"]
+
 [dev-dependencies]
 itertools = { version = "0.10.0", default-features = false, features = ["use_std"] }
 criterion = "0.5.1"
