--- a/zenu-cublas-sys/Cargo.toml
+++ b/zenu-cublas-sys/Cargo.toml
@@ -2,6 +2,8 @@
 name = "zenu-cublas-sys"
 version = "0.1.0"
 edition = "2021"
+description = "Rust bindings for cuBLAS"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
