update build script

--- a/zenu-cublas-sys/Cargo.toml
+++ b/zenu-cublas-sys/Cargo.toml
@@ -8,6 +8,11 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libc="0.2.153"
+
+[build-dependencies]
+bindgen = "0.69.4"
+zenu-cuda-config = { path = "../zenu-cuda-config", version = "0.1.0"}
 
 [lints]
 workspace = true
