--- a/zenu-cudnn-sys/Cargo.toml
+++ b/zenu-cudnn-sys/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libc = "0.2.151"
+
+[build-dependencies]
+bindgen = "0.69.4"
+zenu-cuda-config = { path = "../zenu-cuda-config", version = "0.1.0"}
 
 [lints]
 workspace = true
