feat(zenu-cuda): Integrate CUDA functionality into zenu-matrix
This commit integrates CUDA functionality into the zenu-matrix library.
It includes changes in the build.rs files to generate bindings.rs in the
source directory instead of OUT_DIR. It also modifies the Cargo.toml
files to include the new zenu-cuda library as a dependency. The
zenu-matrix library has been updated to use the new zenu-cuda library
when the "nvidia" feature is enabled. The memory_impl.rs file has been
updated to use the CUDA functions for memory allocation and deallocation
when the "nvidia" feature is enabled.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "zenu",
     "zenu-autograd", 
     "zenu-cublas-sys", 
+    "zenu-cuda", 
     "zenu-cuda-config", 
     "zenu-cuda-driver-sys", 
     "zenu-cuda-runtime-sys", 
@@ -18,4 +19,3 @@ pedantic = "warn"
 
 [profile.bench]
 debug = true
-
