feat(kernel): Add CUDA kernel support
This commit introduces CUDA kernel support to the project. It includes
the addition of new CUDA files, modification of Cargo.toml files, and
updates to the existing Rust files. The CUDA kernel support will enhance
the project's ability to handle GPU computations efficiently.

--- a/zenu-cuda-kernel-sys/Cargo.toml
+++ b/zenu-cuda-kernel-sys/Cargo.toml
@@ -6,6 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libc = "0.2.153"
+
+[build-dependencies]
+bindgen = "0.69.4"
+cc = "*"
 
 [lints]
 workspace = true
+
+[dev-dependencies]
+zenu-cuda-runtime-sys = { path = "../zenu-cuda-runtime-sys" }
