--- a/zenu-cuda/Cargo.toml
+++ b/zenu-cuda/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 once_cell = "1.19.0"
+libc = "0.2.153"
 
 zenu-cuda-driver-sys = { path = "../zenu-cuda-driver-sys", version="0.1.0" }
 zenu-cuda-runtime-sys = { path = "../zenu-cuda-runtime-sys", version="0.1.0" }
