feat: Add zenu-matrix-test module
This commit introduces a new module named 'zenu-matrix-test'. This module
contains basic unit tests for the matrix operations. It has been added to
the workspace in Cargo.toml. The zenu-matrix module now has a dependency
on zenu-matrix-test.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ members = [
     "zenu-cublas-sys", 
     "zenu-cuda", 
     "zenu-cuda-config", 
-    "zenu-cuda-driver-sys", "zenu-cuda-kernel-sys", 
+    "zenu-cuda-driver-sys", 
+    "zenu-cuda-kernel-sys", 
     "zenu-cuda-runtime-sys", 
     "zenu-cudnn-sys",
     "zenu-layer",
     "zenu-matrix", 
+    "zenu-matrix-test", 
     "zenu-optimizer"
 ]
 
