--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,18 @@
 [workspace]
 resolver = "2"
 members = [
-    "zenu",
-    "zenu-autograd", 
+    # "zenu",
+    # "zenu-autograd", 
     "zenu-cublas-sys", 
     "zenu-cuda", 
     "zenu-cuda-config", 
-    "zenu-cuda-driver-sys", "zenu-cuda-kernel-sys", 
+    "zenu-cuda-driver-sys", 
+    "zenu-cuda-kernel-sys", 
     "zenu-cuda-runtime-sys", 
     "zenu-cudnn-sys",
-    "zenu-layer",
+    # "zenu-layer",
     "zenu-matrix", 
-    "zenu-optimizer"
+    # "zenu-optimizer"
 ]
 
 [workspace.lints.clippy]
