--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [workspace]
 resolver = "2"
 members = [
-    "zenu",
-    "zenu-autograd", 
+    # "zenu",
+    # "zenu-autograd", 
     "zenu-cublas-sys", 
     "zenu-cuda", 
     "zenu-cuda-config", 
@@ -10,10 +10,10 @@ members = [
     "zenu-cuda-kernel-sys", 
     "zenu-cuda-runtime-sys", 
     "zenu-cudnn-sys",
-    "zenu-layer",
+    # "zenu-layer",
     "zenu-matrix", 
     "zenu-matrix-test", 
-    "zenu-optimizer"
+    # "zenu-optimizer"
 ]
 
 [workspace.lints.clippy]
