Update GitHub Actions workflow to install libopenblas-dev

--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -18,3 +18,6 @@ runs:
           ~/.cargo/git/db
           sql-extraction/rs/target/
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.toml') }}
+
+    - name: Install openblas
+      run: sudo apt-get install libopenblas-dev -y
