--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Run clippy
-        run: cargo clippy --verbose
+        run: cd zenu-matrix && cargo clippy --verbose
 
   fmt:
     runs-on: ubuntu-latest
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run fmt
         run: cargo fmt -- --check
-        
+
   test:
     runs-on: ubuntu-latest
     steps:
@@ -35,4 +35,4 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Run tests
-        run: cargo test --verbose
+        run: cd zenu-matrix && cargo test --verbose
