--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,7 @@
 resolver = "2"
 members = [
     # "zenu",
-    # "zenu-autograd", 
-    # "zenu",
-    # "zenu-autograd", 
+    "zenu-autograd", 
     "zenu-cublas-sys", 
     "zenu-cuda", 
     "zenu-cuda-config", 
@@ -14,7 +12,6 @@ members = [
     "zenu-cuda-kernel-sys", 
     "zenu-cuda-runtime-sys", 
     "zenu-cudnn-sys",
-    # "zenu-layer",
     # "zenu-layer",
     "zenu-matrix", 
     "zenu-matrix-test", 
