--- a/zenu-autograd/Cargo.toml
+++ b/zenu-autograd/Cargo.toml
@@ -15,6 +15,7 @@ lazy_static = "1.4.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
+zenu-matrix-test = { path = "../zenu-matrix-test", version = "0.1.0" }
 
 [[bench]]
 name = "conv2d"
