--- a/zenu/Cargo.toml
+++ b/zenu/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.1"
 edition = "2021"
 description = "A simple Deep Learning library for Rust"
 license = "MIT"
+repository = "https://github.com/bokutotu/zenu"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
