--- a/zenu-autograd/Cargo.toml
+++ b/zenu-autograd/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.1"
 edition = "2021"
 description = "A simple autograd library for learning purposes"
 license = "MIT"
+repository = "https://github.com/bokutotu/zenu"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
