--- a/zenu-cuda-driver-sys/Cargo.toml
+++ b/zenu-cuda-driver-sys/Cargo.toml
@@ -2,6 +2,7 @@
 name = "zenu-cuda-driver-sys"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/bokutotu/zenu"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
