--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,9 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Run clippy
-        run: cd zenu-matrix && cargo clippy --verbose
+        run: |
+          cd zenu-matrix && cargo clippy --verbose
+          cd zenu-autograd && cargo clippy --verbose
 
   fmt:
     runs-on: ubuntu-latest
@@ -38,4 +40,6 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Run tests
-        run: cd zenu-matrix && cargo test --verbose
+        run: |
+          cd zenu-matrix && cargo test --verbose
+          cd zenu-autograd && cargo test --verbose
