--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,10 +15,11 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
-      - name: Run clippy
-        run: |
-          cd zenu-matrix && cargo clippy --verbose
-          cd zenu-autograd && cargo clippy --verbose
+      - name: Run clippy on zenu-matrix
+        run: cd zenu-matrix && cargo clippy --verbose
+
+      - name: Run clippy on zenu-autograd
+        run: cd zenu-autograd && cargo clippy --verbose
 
   fmt:
     runs-on: ubuntu-latest
@@ -39,7 +40,8 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
-      - name: Run tests
-        run: |
-          cd zenu-matrix && cargo test --verbose
-          cd zenu-autograd && cargo test --verbose
+      - name: Run tests on zenu-matrix
+        run: cd zenu-matrix && cargo test --verbose
+          
+      - name: Run tests on zenu-autograd
+        run: cd ../zenu-autograd && cargo test --verbose
