--- a/zenu-matrix/Cargo.toml
+++ b/zenu-matrix/Cargo.toml
@@ -18,6 +18,8 @@ serde = { version = "1.0.197", features = ["derive"] }
 zenu-cuda = { path = "../zenu-cuda", optional = true, version = "0.1.0" }
 
 [features]
+no-nvidia = []
+default = ["nvidia"]
 nvidia = ["zenu-cuda"]
 
 [dev-dependencies]
