--- a/zenu-matrix/Cargo.toml
+++ b/zenu-matrix/Cargo.toml
@@ -19,7 +19,7 @@ zenu-cuda = { path = "../zenu-cuda", optional = true, version = "0.1.0" }
 
 [features]
 # no-nvidia = []
-# default = ["nvidia"]
+default = ["nvidia"]
 nvidia = ["zenu-cuda"]
 
 [dev-dependencies]
