--- a/zenu-layer/Cargo.toml
+++ b/zenu-layer/Cargo.toml
@@ -15,9 +15,11 @@ zenu-autograd = { path = "../zenu-autograd", version = "0.1.1" }
 rand = "0.8.5"
 rand_distr = "0.4.3"
 
+[dev-dependencies]
+zenu-test = { path = "../zenu-test", version = "*" }
+
 [lints]
 workspace = true
 
 [profile.bench]
 debug = true
-
