--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,8 +21,8 @@ jobs:
       - name: Run clippy on zenu-autograd
         run: cd zenu-autograd && cargo clippy --verbose
 
-      - name: Run clippy on zenu-layers
-        run: cd zenu-layers && cargo clippy --verbose
+      - name: Run clippy on zenu-layer
+        run: cd zenu-layer && cargo clippy --verbose
 
   fmt:
     runs-on: ubuntu-latest
@@ -49,5 +49,5 @@ jobs:
       - name: Run tests on zenu-autograd
         run: cd zenu-autograd && cargo test --verbose
 
-      - name: Run tests on zenu-layers
-        run: cd zenu-layers && cargo test --verbose
+      - name: Run tests on zenu-layer
+        run: cd zenu-layer && cargo test --verbose
