--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,9 @@ jobs:
       - name: Run clippy on zenu-optimizer
         run: cd zenu-optimizer && cargo clippy --verbose
 
+      - name: Run clippy on zenu
+        run: cd zenu && cargo clippy --verbose
+
   fmt:
     runs-on: ubuntu-latest
     steps:
@@ -57,3 +60,6 @@ jobs:
 
       - name: Run tests on zenu-optimizer
         run: cd zenu-optimizer && cargo test --verbose
+
+      - name: Run tests on zenu
+        run: cd zenu && cargo test --verbose
