--- a/zenu-layer/Cargo.toml
+++ b/zenu-layer/Cargo.toml
@@ -15,8 +15,12 @@ zenu-autograd = { path = "../zenu-autograd", version = "0.1.1" }
 rand = "0.8.5"
 rand_distr = "0.4.3"
 
+serde = { version = "1.0.197", features = ["derive"] }
+
 [dev-dependencies]
 zenu-test = { path = "../zenu-test", version = "*" }
+
+serde_json = "*"
 
 [lints]
 workspace = true
