--- a/zenu-autograd/Cargo.toml
+++ b/zenu-autograd/Cargo.toml
@@ -13,6 +13,7 @@ zenu-matrix = { path = "../zenu-matrix", version = "0.1.1" }
 rand = "0.8.5"
 rand_distr = "0.4.3"
 lazy_static = "1.4.0"
+serde = { version = "1.0.197", features = ["derive"] }
 
 [dev-dependencies]
 criterion = "0.5.1"
