--- a/zenu-layer/Cargo.toml
+++ b/zenu-layer/Cargo.toml
@@ -16,6 +16,8 @@ rand = "0.8.5"
 rand_distr = "0.4.3"
 
 serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
+bincode = "1.3.3"
 
 [dev-dependencies]
 zenu-test = { path = "../zenu-test", version = "*" }
