--- a/zenu/Cargo.toml
+++ b/zenu/Cargo.toml
@@ -21,6 +21,9 @@ serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0"
 tar = "0.4.40"
 
+[dev-dependencies]
+zenu-test = { path = "../zenu-test", version = "0.1.0" }
+
 [profile.bench]
 debug = true
 
