--- a/zenu-matrix/Cargo.toml
+++ b/zenu-matrix/Cargo.toml
@@ -15,6 +15,7 @@ rand = "0.8.5"
 rand_distr = "0.4.3"
 serde = { version = "1.0.197", features = ["derive"] }
 libc = "0.2"
+once_cell = "1.19.0"
 
 zenu-cuda = { path = "../zenu-cuda", optional = true, version = "0.1.0" }
 
