--- a/zenu-macros/Cargo.toml
+++ b/zenu-macros/Cargo.toml
@@ -16,8 +16,7 @@ zenu-autograd = { path = "../zenu-autograd", version = "0.1.1" }
 zenu-optimizer = { path = "../zenu-optimizer", version = "0.1.0" }
 zenu-layer = { path = "../zenu-layer", version = "0.1.0" }
 serde = { version = "1.0.197", features = ["derive"] }
-serde_derive = "1.0"
-
+serde_json = "1.0"
 
 [lib]
 proc-macro = true
