--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,8 +27,8 @@ jobs:
       - name: Run clippy on zenu-optimizer
         run: cd zenu-optimizer && cargo clippy --verbose
 
-      - name: Run clippy on zenu-macro
-        run: cd zenu-macro && cargo clippy --verbose
+      - name: Run clippy on zenu-macros
+        run: cd zenu-macros && cargo clippy --verbose
 
       - name: Run clippy on zenu
         run: cd zenu && cargo clippy --verbose
@@ -64,8 +64,8 @@ jobs:
       - name: Run tests on zenu-optimizer
         run: cd zenu-optimizer && cargo test --verbose
 
-      - name: Run tests on zenu-macro
-        run: cd zenu-macro && cargo test --verbose
+      - name: Run tests on zenu-macros
+        run: cd zenu-macros && cargo test --verbose
 
       - name: Run tests on zenu
         run: cd zenu && cargo test --verbose
