--- a/zenu/Cargo.toml
+++ b/zenu/Cargo.toml
@@ -19,6 +19,7 @@ flate2 = { version = "1.0", features = ["zlib"] }
 rand = { version = "0.8.5", features = ["small_rng"] }
 serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0"
+bincode = "1.3.3"
 tar = "0.4.40"
 
 [dev-dependencies]
