--- a/zenu-matrix/Cargo.toml
+++ b/zenu-matrix/Cargo.toml
@@ -21,6 +21,9 @@ zenu-cuda = { path = "../zenu-cuda", optional = true, version = "0.1.0" }
 
 [features]
 nvidia = ["zenu-cuda"]
+default = ["nvidia"]
+
+cpu = []
 
 [dev-dependencies]
 itertools = { version = "0.10.0", default-features = false, features = ["use_std"] }
