--- a/zenu-test/Cargo.toml
+++ b/zenu-test/Cargo.toml
@@ -8,5 +8,11 @@ repository = "https://github.com/bokutotu/zenu"
 
 [dependencies]
 
+zenu-matrix = { path = "../zenu-matrix" }
+zenu-autograd = { path = "../zenu-autograd" }
+
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
 [lints]
 workspace = true
