--- a/zenu-autograd/Cargo.toml
+++ b/zenu-autograd/Cargo.toml
@@ -14,6 +14,7 @@ rand = "0.8.5"
 rand_distr = "0.4.3"
 lazy_static = "1.4.0"
 serde = { version = "1.0.197", features = ["derive"] }
+once_cell = "1.19.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
