--- a/zenu-macros/Cargo.toml
+++ b/zenu-macros/Cargo.toml
@@ -9,11 +9,8 @@ quote = "1"
 syn = { version = "1", features = ["full"] }
 
 [dev-dependencies]
-zenu-matrix = { path = "../zenu-matrix", version = "0.1.1" }
-zenu-autograd = { path = "../zenu-autograd", version = "0.1.1" }
-zenu-optimizer = { path = "../zenu-optimizer", version = "0.1.0" }
 zenu-test = { path = "../zenu-test", version = "0.1.0" }
-zenu-layer = { path = "../zenu-layer", version = "0.1.0" }
+zenu = { path = "../zenu", version = "0.1.0" }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0"
 rand_distr = "0.4.3"
