--- a/zenu-optimizer/Cargo.toml
+++ b/zenu-optimizer/Cargo.toml
@@ -15,6 +15,9 @@ zenu-layer = { path = "../zenu-layer", version = "0.1.0" }
 
 [dev-dependencies]
 zenu-test = { path="../zenu-test/", version="*"}
+zenu = { path="../zenu/", version="*"}
+rand = { version = "0.8.5", features = ["small_rng"] }
+rand_distr = "0.4.2"
 
 [lints]
 workspace = true
