--- a/zenu-cuda-config/Cargo.toml
+++ b/zenu-cuda-config/Cargo.toml
@@ -3,8 +3,7 @@ name = "zenu-cuda-config"
 version = "0.1.0"
 edition = "2021"
 repository = "https://github.com/bokutotu/zenu"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
 
 [dependencies]
 glob = "0.3"
