--- a/zenu-cuda-runtime-sys/Cargo.toml
+++ b/zenu-cuda-runtime-sys/Cargo.toml
@@ -3,6 +3,8 @@ name = "zenu-cuda-runtime-sys"
 version = "0.1.0"
 edition = "2021"
 repository = "https://github.com/bokutotu/zenu"
+license = "MIT"
+description = "CUDA runtime bindings for Rust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
