--- a/zenu-cudnn-sys/Cargo.toml
+++ b/zenu-cudnn-sys/Cargo.toml
@@ -3,6 +3,8 @@ name = "zenu-cudnn-sys"
 version = "0.1.0"
 edition = "2021"
 repository = "https://github.com/bokutotu/zenu"
+license = "MIT"
+description = "Rust bindings for cuDNN"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
