--- a/zenu-matrix/Cargo.toml
+++ b/zenu-matrix/Cargo.toml
@@ -16,7 +16,7 @@ rand_distr = "0.4.3"
 serde = { version = "1.0.197", features = ["derive"] }
 libc = "0.2"
 once_cell = "1.19.0"
-num-traits = "*"
+num-traits = "0.2.19"
 
 zenu-cuda = { path = "../zenu-cuda", optional = true, version = "0.1.0" }
 
