--- a/zenu-layer/Cargo.toml
+++ b/zenu-layer/Cargo.toml
@@ -18,7 +18,7 @@ rand_distr = "0.4.3"
 [dev-dependencies]
 zenu-test = { path = "../zenu-test" }
 
-serde_json = "*"
+serde_json = "1"
 
 [lints]
 workspace = true
