--- a/zenu-optimizer/Cargo.toml
+++ b/zenu-optimizer/Cargo.toml
@@ -14,8 +14,8 @@ zenu-autograd = { path = "../zenu-autograd", version = "0.1.2" }
 zenu-layer = { path = "../zenu-layer", version = "0.1.1" }
 
 [dev-dependencies]
-zenu-test = { path="../zenu-test/", version="*"}
-zenu = { path="../zenu/", version="*"}
+zenu-test = { path="../zenu-test/" }
+zenu = { path="../zenu/"}
 rand = { version = "0.8.5", features = ["small_rng"] }
 rand_distr = "0.4.2"
 
