add cudnn frontend wrapper

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ members = [
     "zenu-matrix", 
     "zenu-test", 
     "zenu-optimizer", 
-    "zenu-macros"
+    "zenu-macros", 
+    "zenu-cudnn-frontend-wrapper"
 ]
 
 [workspace.lints.clippy]
